- ModuleRemoveDropProperty + bumb nucleus codec